--- a/vue/daily-console/src/assets/css/base.css
+++ b/vue/daily-console/src/assets/css/base.css
@@ -4,3 +4,7 @@ body{
     margin: 0;
     padding: 0;
 }
+
+.daily-shadow{
+    box-shadow: 0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04)
+}
